= {project-name} Changelog
:project-name: Asciidoctor FB2
:project-handle: asciidoctor-fb2
:slug: slonopotamus/{project-handle}
:uri-project: https://github.com/{slug}

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {uri-project}/commits/master[commit history] on GitHub.

== 0.1.0 (2020-07-24) - @slonopotamus

* Initial release